# Subdivision2D

./: CMakeLists.txt  format-project.sh
include/: Subdivision2D.h
include/subdiv2d/: AssertAndError.h  CMakeLists.txt  FixedMaxSizeArray.h  IdTypes.h  Subdiv2DConfig.h.cmake_in  SubdivContainer.h  Subdivision2D.h  TypeSafeIndex.h  TypeSafeIndexOutput.h  Types.h
samples/: AngleMesh.cpp  AngleMeshUtils.cpp  AngleMeshUtils.h  CMakeLists.txt  EigenStdArrayInterop.h  GenericExtremaFinder.h
src/: AssertAndError.cpp  AssertAndError.h  CMakeLists.txt  SubdivContainer.cpp  Subdivision2D.cpp  TypeSafeIndexIterable.h
tests/: BasicTests.cpp  CMakeLists.txt  Container.cpp
